[package]
name = "rdrillog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"
argh = "0.1.13"
warp = "0.3.7"
ipnet = "2.11.0"
tokio = { version = "1.44.2", features = ["full"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
chrono = "0.4.41"